sbirez/static/sass/main.scss
/* @override http://localhost:4000/stylesheets/styles.css */

/* @group bootstrap */

div.skip-nav a { position: absolute; left: -10000; top: 0; width: 1px; height: 1px; overflow: hidden; } div.skip-nav a:focus { position: absolute; top: 5px; left: 5px; width: auto; height: auto; z-index: 999999; background-color: white; padding-left: 2px; padding-right: 2px; overflow: visible; }


body{
    font-family: helvetica neue, helvetica, sans-serif;
    font-size: 16px;
    color: #333;
    padding-bottom: 2em;
    background-color: white;
}

a{ color: #0064be; }
a:hover{ color: #003c72; }

a.a-return{ 
    color: #666; 
    font-size: 14px;
    display: block;
    padding-top: 8px;
}

a.a-return::before{
    content: "\2190";
    color: #888;
    margin-left: 4px;
    margin-right: 10px;
    display: inline-block;
    background: #f3f3f3;
    width: 24px;
    height: 24px;
    line-height: 24px;
    border-radius: 100%;
    text-align: center;
	
}
a.a-return:hover{ color: #333; }
a.a-return:hover::before{ color: #444; background: #eee;}





@media screen and (min-width: 768.88px) {
}

p, li, dd, dt {
    line-height: 1.4em;
    max-width: 36em;
    margin-bottom: 0.7em;
}

@media screen and (min-width: 533.33px) {
    dl {
        padding-top: 16px;
        margin-top: 32px;
        border-top: 1px solid #eee;
        -webkit-column-count: 2;
        -moz-column-count: 2;
        -column-count: 2;
    }	
}

dt{
	margin-bottom: 0;
	color: #444;
	font-size: 0.8em;
	font-weight: 600;
}

span.preposition{
    font-style: italic;
    font-family: Georgia;
    text-transform: lowercase;
}

div.wrap{
    width: 90%;
    max-width: 800px;
    margin: 0 auto;
    position: relative;
}

div.wrap::after{
    content: "";
    display: table;
    clear: both;
}


h1.primary-header {
    font-size: 32px;
    font-family: 'franklin-gothic-urw-cond', Helvetica Neue, Helvetica, sans-serif;
    line-height: 1;
    margin-top: 24px;
    margin-bottom: 0.6em;
    margin-left: -0.03em;
}

@media screen and (min-width: 711.11px) { 
    h1.primary-header{ 
        font-size: 40px; 
        margin-bottom: 0.4em;
    } 
}

main ol{ 
    margin-bottom: 2em;
    padding-top: 1em; 
}

div.notice{
	font-size: 14px;
	padding: 12px;
	border: 1px solid goldenrod;
	border-radius: 3px;
	margin: 1em 0;
	background: #fff2df;
	color: #4f0e00;
	
}
div.notice a{
	color: #af3b00;
}
div.notice p:last-child{ margin-bottom: 0;}


/* @end */

/* @group forms */

/* @group summary.error-message */

summary.error-message{
    background: #990017;
    color: white;
    padding: 8px;
    border-radius: 3px;
    font-size: 14px;
    line-height: 18px;
    margin-bottom: 24px;
    margin-top: -8px;
}

summary.error-message details{ margin-top: 8px; }
summary.error-message details p:first-of-type{ margin-top: 8px; }
summary.error-message details ol{
    list-style-type: decimal;
    margin: 0 0 0 1.4em;
    padding-top: 0;
}

summary.error-message details ol li{
    margin-bottom: 6px;
}

/* @end */

label { display: block; }

input[type=text],
input[type=email],
input[type=number],
input[type=password],
input[type=search],
select,
textarea{
    -webkit-appearance: none;
    padding: 4px 8px;
    border: 1px solid #ccc;
    border-radius: 3px;
    line-height: 36px;
    min-height: 36px;
    min-width: 4em;
    width: 100%;
    margin: 0;
    font: inherit;
}

.field-select select{
    min-width: 0; 
    background: none;
    padding-right: 24px;
    overflow: hidden;
    text-overflow: ellipsis;
    display: block;
}

.field-select span.label-select{ 
    position: relative; 
    width: 15%;
    display: block;
}

.field-select span.label-select::after{
    content: "";
    border: 6px solid black;
    position: absolute;
    right: 8px;
    bottom: 10px;
    border-color: #aaa transparent transparent transparent;
    z-index: -1;
}

.field-select:hover select{ border-color: #aaa; }
.field-select:hover::after{ border-top-color: #888; }

textarea{
    display: block;
    width: 100%;
    max-width: 40em;
    min-height: 12em;
}

button,
.button {
    background: none;
    border: 1px solid;
    color: #008c52;
    font: inherit;
    padding: 10px 12px;
    margin: 0;  
    line-height: 16px;	
    cursor: pointer;
    text-decoration: none;
    border-radius: 3px;
    display: inline-block;
    vertical-align: middle;
}

button:hover {
    background: #00834d;
    border-color: #00834d;
    color: white;
    box-shadow: 0 1px 0 #f3f3f3;
}

button:active {
    color: #7aa79d;
    background: #006e52;
    border-color: #006e52;
    box-shadow: inset 0 1px 0 rgba(0,0,0,0.1);
}

button.button-remove{ color: #e51600; }
button.button-remove:hover{ 
    background: #cc1602; 
    border-color: #cc1602; 
    color: white;
}

button.button-remove:active{ 
    color: #ffb302; 
    background: #911002;
    border-color: #911002; 
}

form > h1 ,
body.sign-up-post main h1,
.fieldset-dynamic > header > h1 {
    margin-top: 32px;
    margin-bottom: 16px;
    font-size: 28px;
    line-height: 32px;
    color: #444;
    font-family: Georgia;
}

form a.a-return + h1{
    margin-top: 1em !important;	
}

div.field,
section.fieldset,
section.fieldset.fieldset-radio{ margin-bottom: 24px; }

div.field+section.fieldset{ margin-top: 32px; }

section.fieldset{
    border: 1px solid #cfcfcf;
    padding: 20px 16px 16px;
    position: relative;
    margin-bottom: 20px;
    border-radius: 4px;
}

.fieldset+.fieldset:not(.fieldset-radio){ margin-top: 32px; }

.fieldset-principal-investigator .fieldset:last-of-type,
.fieldset-dynamic-item.field:last-of-type{
    margin-bottom: 2px;
}

section.fieldset > h1,
section.fieldset > header > h1{
    position: absolute;
    background: white;
    margin: 0 0 -3px;
    bottom: 100%;
    left: 8px;
    padding: 0 1px;
    font-size: 14px;
    line-height: 16px;
    font-weight: 600;
    color: #777;
}

section.fieldset div.field:last-of-type+section.fieldset{
    margin-top: 24px;
}
/* ... */

